--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
-    </dependencies>  
+    </dependencies>
+    
+    <build>
+    <resources>
+        <resource>
+            <directory>src/main/java/</directory>
+            <includes>
+                <include>hibernate.cfg.xml</include>
+            </includes>
+        </resource>
+    </resources>
+</build>
 </project>
